fix(coder): fix Result Pattern example and format in coding-rules
- Replace broken top-level sealed interface example with correctly nested
  Result Pattern using inner records and sealed sub-interface
- Add caller-side switch expression example for OrderResult
- Move WHY field content outside code block as plain comment
- Add code example to infrastructure exception rule
- Update ScopedValue comment from Preview to JDK 24+ confirmed (JEP 487)